# hass-catgenie

./: .devcontainer.json  README.md  hacs.json  pyproject.toml  requirements.txt  setup.cfg  tbump.toml
custom_components/catgenie/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  manifest.json  sensor.py  switch.py
hack/: update-host.sh
