[tool.poetry]
name = "catgenie"
version = "0.13.1"
description = ""
authors = ["Appkins <appkins@appkins.io>"]
license = "MIT"
packages = [{include = "catgenie", from="custom_components"}]

[tool.poetry.dependencies]
async_timeout = "^4.0.0"
aiohttp = "^3.7.4"
homeassistant = "^2024.12.0"
python = ">=3.12,<3.13"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
homeassistant-stubs = "^2024.12.0"
pytest-homeassistant-custom-component = "^0.13.89"
ruff = "^0.7.2"
reorder-python-imports = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportImportCycles = "warning"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
